--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -283,7 +283,7 @@ section {
 .section-bg {
   background: #fff;
 }
-.section#resume{
+section#resume{
   background: #fdf5f5;
 }
 section#portfolio {
