--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -288,6 +288,7 @@ section#resume{
 }
 section#portfolio {
     padding-bottom: 30px;
+    background: #fdf5f5;
 }
 .section-title {
   padding-bottom: 30px;
