--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -745,6 +745,7 @@ box-shadow: rgb(60 64 67 / 30%) 0px 1px 2px 0px, rgb(60 64 67 / 15%) 0px 2px 6px
 --------------------------------------------------------------*/
 .contact {
   padding-bottom: 130px;
+  background: #fdf5f5;
 }
 
 .contact .info {
