--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -967,7 +967,9 @@ box-shadow: rgb(60 64 67 / 30%) 0px 1px 2px 0px, rgb(60 64 67 / 15%) 0px 2px 6px
 # Portfolio Details
 --------------------------------------------------------------*/
 
-
+.main-pg-portfolio {
+  margin-top: -114px;
+}
 
 .portfolio-image-cls img {
   height: 48vh;
